--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "3.8.1",
+    "date-fns": "^2.28.0",
     "next": "latest",
+    "octokit": "^1.7.1",
     "react": "^17.0.2",
+    "react-charts": "^3.0.0-beta.34",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
+    "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "prisma": "^3.8.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.5"
   }
 }
