--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,7 +16,9 @@ jobs:
         env:
           SECRET: ${{ env.SECRET }}
         run: |
-          curl -f -X POST \
-            -H 'Content-Type: application/json' \
-            -d '{"secret":"$SECRET"}' \
+          curl \
+            --request POST \
+            --header 'Content-Type: application/json' \
+            --data '{"secret":"$SECRET"}' \
+            --fail \
             https://nextjs-issue-tracker.vercel.app/api/populate
