--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,5 +18,5 @@ jobs:
             --request POST \
             --header 'Content-Type: application/json' \
             --data '{"secret":\"$SECRET\"}' \
-            --fail \
+            --fail-with-body \
             https://nextjs-issue-tracker.vercel.app/api/populate
