revert "--fail-with-body" as it doesn't work on ubuntu-latest

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,5 +18,5 @@ jobs:
             --request POST \
             --header 'Content-Type: application/json' \
             --data '{"secret":\"$SECRET\"}' \
-            --fail-with-body \
+            --fail \
             https://nextjs-issue-tracker.vercel.app/api/populate
