--- a/package.json
+++ b/package.json
@@ -8,11 +8,24 @@
   },
   "dependencies": {
     "@prisma/client": "3.8.1",
+    "@visx/axis": "^2.6.0",
+    "@visx/brush": "^2.6.0",
+    "@visx/curve": "^2.1.0",
+    "@visx/event": "^2.6.0",
+    "@visx/gradient": "^2.1.0",
+    "@visx/grid": "^2.6.0",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/pattern": "^2.1.2",
+    "@visx/responsive": "^2.4.1",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.4.0",
+    "@visx/tooltip": "^2.2.2",
+    "d3-array": "^3.1.1",
+    "d3-time-format": "^4.1.0",
     "date-fns": "^2.28.0",
     "next": "latest",
     "octokit": "^1.7.1",
     "react": "^17.0.2",
-    "react-charts": "^3.0.0-beta.34",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
