--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
@@ -32,6 +33,8 @@
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
     "tailwindcss": "^3.0.7",
