add code, correct env var escaping

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,5 +17,6 @@ jobs:
           curl \
             --request POST \
             --header 'Content-Type: application/json' \
-            --data '{"secret":\"$SECRET\"}' \
+            --data '{ "secret": "'$SECRET'" }' \
+            --fail \
             https://nextjs-issue-tracker.vercel.app/api/populate
