--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate --data-proxy && next build",
     "lint": "next lint",
     "start": "next start"
   },
@@ -15,6 +15,7 @@
     "@visx/event": "^2.6.0",
     "@visx/gradient": "^2.1.0",
     "@visx/grid": "^2.6.0",
+    "@visx/group": "^2.10.0",
     "@visx/mock-data": "^2.1.2",
     "@visx/pattern": "^2.1.2",
     "@visx/responsive": "^2.4.1",
@@ -24,7 +25,7 @@
     "d3-array": "^3.1.1",
     "d3-time-format": "^4.1.0",
     "date-fns": "^2.28.0",
-    "next": "latest",
+    "next": "canary",
     "octokit": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
