--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
 # vercel
 .vercel
@@ -40,3 +37,4 @@ yarn-error.log*
 dev.db
 count.json
 issues.json
+next-env-d.ts
