--- a/package.json
+++ b/package.json
@@ -8,37 +8,37 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "4.1.0",
-    "@visx/axis": "^2.6.0",
-    "@visx/brush": "^2.6.0",
+    "@prisma/client": "4.4.0",
+    "@visx/axis": "^2.12.2",
+    "@visx/brush": "^2.12.2",
     "@visx/curve": "^2.1.0",
     "@visx/event": "^2.6.0",
-    "@visx/gradient": "^2.1.0",
-    "@visx/grid": "^2.6.0",
+    "@visx/gradient": "^2.10.0",
+    "@visx/grid": "^2.12.2",
     "@visx/group": "^2.10.0",
     "@visx/mock-data": "^2.1.2",
-    "@visx/pattern": "^2.1.2",
-    "@visx/responsive": "^2.4.1",
+    "@visx/pattern": "^2.10.0",
+    "@visx/responsive": "^2.10.0",
     "@visx/scale": "^2.2.2",
-    "@visx/shape": "^2.4.0",
-    "@visx/tooltip": "^2.2.2",
-    "d3-array": "^3.1.1",
+    "@visx/shape": "^2.12.2",
+    "@visx/tooltip": "^2.10.0",
+    "d3-array": "^3.2.0",
     "d3-time-format": "^4.1.0",
-    "date-fns": "^2.28.0",
-    "next": "canary",
-    "octokit": "^2.0.4",
+    "date-fns": "^2.29.3",
+    "next": "^12.3.1",
+    "octokit": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
-    "autoprefixer": "^10.4.0",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "postcss": "^8.4.5",
-    "prisma": "^4.1.0",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.7.4"
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "prisma": "^4.4.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
